# xero-toolkit

./: Cargo.toml
gui/: Cargo.toml  build.rs
gui/resources/: resources.gresource.xml
gui/resources/css/: style.css
gui/resources/ui/: main.ui
gui/resources/ui/dialogs/: about_dialog.ui  dependency_error_dialog.ui  download_dialog.ui  download_setup_dialog.ui  scheduler_selection_dialog.ui  selection_dialog.ui  task_list_dialog.ui  terminal_dialog.ui  warning_dialog.ui  xerolinux_check_dialog.ui
gui/resources/ui/tabs/: biometrics.ui  containers_vms.ui  customization.ui  drivers.ui  gamescope.ui  gaming_tools.ui  kernel_manager.ui  kernel_manager_scx.ui  kernel_schedulers.ui  kernel_system.ui  main_page.ui  multimedia_tools.ui  scx_scheduler.ui  servicing_system_tweaks.ui
gui/src/: config.rs  main.rs
gui/src/config/: constants.rs
gui/src/core/: aur.rs  autostart.rs  daemon.rs  download.rs  mod.rs  package.rs  system_check.rs
gui/src/ui/: app.rs  context.rs  mod.rs  navigation.rs  utils.rs
gui/src/ui/dialogs/: about.rs  download.rs  error.rs  mod.rs  selection.rs  terminal.rs
gui/src/ui/pages/: biometrics.rs  containers_vms.rs  customization.rs  drivers.rs  gamescope.rs  gaming_tools.rs  kernel_manager_scx.rs  main_page.rs  mod.rs  multimedia_tools.rs  scx_scheduler.rs  servicing.rs
gui/src/ui/seasonal/: common.rs  halloween.rs  mod.rs  snow.rs
gui/src/ui/task_runner/: command.rs  executor.rs  mod.rs  widgets.rs
packaging/: PKGBUILD
resources/: resources.gresource.xml
resources/css/: style.css
resources/ui/: download_dialog.ui  download_setup_dialog.ui  main.ui  selection_dialog.ui  task_list_dialog.ui
resources/ui/dialogs/: dependency_error_dialog.ui  download_dialog.ui  download_setup_dialog.ui  selection_dialog.ui  task_list_dialog.ui  xerolinux_check_dialog.ui
resources/ui/tabs/: containers_vms.ui  customization.ui  drivers.ui  gaming_tools.ui  main_page.ui  multimedia_tools.ui  servicing_system_tweaks.ui
scripts/: nv-setup.sh
sources/scripts/: nvidia_grub.sh  nvidia_mkinitcpio.sh  sudo
sources/systemd/: scx.service.in
src/: main.rs
src/core/: autostart.rs  context.rs  mod.rs  system_check.rs
src/ui/: app.rs  download.rs  download_dialog.rs  mod.rs  selection_dialog.rs  tabs.rs  terminal.rs
src/ui/command_execution/: mod.rs  widgets.rs
src/ui/dialogs/: terminal.rs
src/ui/pages/: containers_vms.rs  customization.rs  drivers.rs  gaming_tools.rs  main_page.rs  mod.rs  multimedia_tools.rs  servicing.rs
src/ui/task_runner/: executor.rs  mod.rs  widgets.rs
xero-auth/: Cargo.toml
xero-auth/src/: daemon.rs  lib.rs  protocol.rs  protocol_io.rs  shared.rs  utils.rs
