[package]
name = "xero-toolkit"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
xero-auth = { path = "../xero-auth" }
gtk4 = { version = "0.10", features = ["v4_20"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
log = "0.4"
simple_logger = "5.1"
reqwest = { version = "0.13", default-features = false, features = ["stream", "native-tls", "http2", "charset"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
regex = "1"
strip-ansi-escapes = "0.2"
anyhow = "1.0"
dirs = "6"
libc = "0.2"
vte4 = "0.9"
rand = "0.9.2"

[build-dependencies]
glib-build-tools = "0.21"
oxipng = "10"
walkdir = "2"
svgtidy = "0.1"
