[package]
name = "xero-auth"
version.workspace = true
edition = "2021"

[[bin]]
name = "xero-authd"
path = "src/bin/daemon.rs"

[[bin]]
name = "xero-auth"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full", "net", "process", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "5.1"
anyhow = "1.0"
libc = "0.2"
clap = { version = "4", features = ["derive"] }

